# spendy-backend

./: .editorconfig  .gitignore  alembic.ini  main.py  pyproject.toml  spendy.db  test.db
.github/workflows/: docker.yml
alembic/: env.py
alembic/versions/: 91297c4c1492_add_budgets_and_financial_goals_tables.py  9436b9601a32_add_category_id_to_transactions.py
app/: main.py
app/api/: accounts.py  auth.py  blog.py  budgets.py  categories.py  deps.py  goals.py  transactions.py
app/db/: session.py
app/models/: account.py  blog.py  budget.py  category.py  exchange_rate.py  financial_goal.py  session.py  transaction.py  user.py
app/routes/: auth.py
app/schemas/: auth.py  budget.py  category.py  exchange_rate.py
app/utils/: security.py
deployment/: Dockerfile  docker-compose.yml  entrypoint.sh
spendymgr/: main.py
spendymgr/api/: accounts.py  auth.py  budgets.py  categories.py  exchange_rate.py  goals.py  transactions.py
spendymgr/cli/: __init__.py  cli.py  run.py
spendymgr/core/: config.py
spendymgr/db/: session.py
spendymgr/models/: account.py  blog.py  budget.py  category.py  financial_goal.py  session.py  transaction.py  user.py
spendymgr/routes/: auth.py
spendymgr/schemas/: account.py  blog.py  financial_goal.py  transaction.py
spendymgr/utils/: security.py
