[project]
name = "spendymgr"
version = "0.1.0"
description = "Spendy"

requires-python = ">=3.12,<4"
dependencies = [
    "alembic>=1.16.2",
    "click>=8.2.1",
    "fastapi>=0.115.13",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.9.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.34.3",
    "python-multipart>=0.0.20",
]

[project.scripts]
spendymgr = "spendymgr.__main__:main"

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
